[package]
name = "ws-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.15.0"
tungstenite = "0.15.0"
tokio = { version = "1.12.*", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["full"] }
futures-channel = "0.3.17"
futures-util = "0.3.17"